traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:4: error: ':' expected but ')' found.
def avanceCrois(a):Boolean={
                 ^TraversalZigZag:45: error: identifier expected but '}' found.
}
^